syntax = "proto3";

package sk.product_status_history;
option go_package = "sk.v1;product_status_history";

import "google/protobuf/timestamp.proto";

message ProductSkStatusResponse {
  int64 id = 1;
  int64 product_id = 2;
  int32 status_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

service ProductStatusService {
  rpc CreateStatus(CreateStatusRequest) returns (ProductSkStatusResponse);
  rpc GetStatus(GetStatusRequest) returns (ProductSkStatusResponse);
  rpc DeleteStatus(DeleteStatusRequest) returns (DeleteStatusResponse);
  rpc ListStatusesByProduct(ListStatusesByProductRequest) returns (StatusListResponse);
}

// Запросы
message CreateStatusRequest {
  int64 product_id = 1;
  int32 status_id = 2;
}

message GetStatusRequest { int64 id = 1; }
message DeleteStatusRequest { int64 id = 1;}
message ListStatusesByProductRequest { int64 product_id = 1; }
message DeleteStatusResponse {bool success = 1;}
message StatusListResponse {repeated ProductSkStatusResponse statuses = 1;}